# gym-quadruped

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish2pypi.yaml  tests.yaml
examples/: aliengo_dataset.py  aliengo_with_camera.py  aliengo_with_heightmap.py  aliengo_with_imu.py  dataset_reproduction.py
gym_quadruped/: __init__.py  quadruped_env.py  robot_cfgs.py
gym_quadruped/data/: proprioceptive_datasets.py
gym_quadruped/robot_model/: scene_ramp.xml  scene_slippery.xml  scene_stairs.xml
gym_quadruped/robot_model/aliengo/: aliengo.xml  scene_perlin.xml  scene_rough.xml  scene_stairs.xml
gym_quadruped/robot_model/b2/: b2.urdf  b2.xml  scene_flat.xml
gym_quadruped/robot_model/go1/: go1.urdf  go1.xml
gym_quadruped/robot_model/go2/: README.md  go2.xml
gym_quadruped/robot_model/hyqreal/: hyqreal.xml  scene_rough.xml
gym_quadruped/robot_model/hyqreal1/: README.md  hyqreal1.xml
gym_quadruped/robot_model/hyqreal2/: README.md  hyqreal2.urdf  hyqreal2.xml  hyqreal2_nohpu.xml  hyqreal2_nohpu_nobattery.xml
gym_quadruped/robot_model/hyqreal2/assets/: lower_leg_visual.dae  lower_leg_visual.stl  torso.dae  torso.stl  upper_leg_visual.dae  upper_leg_visual.stl  upper_leg_visual_mirrored.stl
gym_quadruped/robot_model/mini_cheetah/: mini_cheetah.xml  scene_new.xml  scene_perlin.xml  scene_slope.xml
gym_quadruped/sensors/: __init__.py  base_sensor.py  heightmap.py  imu.py  rgbd_camera.py
gym_quadruped/utils/: LivePlotter.py  __init__.py  live_plotter.py  math_utils.py  quadruped_utils.py
gym_quadruped/utils/Camera/: Camera_Mujoco.py  utils.py
gym_quadruped/utils/data/: h5_dataset.py  h5py.py
gym_quadruped/utils/mujoco/: terrain.py  visual.py
gym_quadruped/utils/mujoco/assets/: scene_flat.xml
gym_quadruped/utils/mujoco_utils/: terrain.py  visual.py
tests/: env_test.py
