[project]
name = "gym-quadruped"
version = "0.0.8"
description = "A gym environment for quadruped robots using MuJoCo physics engine."
authors = [
    { name="Daniel Ordoñez-Apraez", email="daniels.ordonez@gmail.com" },
    { name="Giulio Turrisi", email="giulio.turrisi@iit.it" },
]
maintainers = [
    { name="Daniel Felipe Ordoñez Apraez", email="daniels.ordonez@gmail.com" },
]

readme = "README.md"
#license = "TODO"
keywords = ["robotics", "locomotion", "quadruped", "deep", "reinforcement", "learning", "environment", "gym", "gymnasium", "mujoco"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]

packages = [{include = "gym_quadruped"}]

dependencies = [
    "numpy",
    "scipy",
    "robot_descriptions",
    "mujoco==3.1.1",
    "noise",
    "opencv-python",
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
    "E701",  # short single-line statements are fine
    "D100",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".idea",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
ignore-init-module-imports = true

#_______________________________________________________
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"