[project]
name = "gym-quadruped"
version = "0.0.10"
description = "A gym environment for quadruped robots using MuJoCo physics engine."
authors = [
    { name="Daniel Ordoñez-Apraez", email="daniels.ordonez@gmail.com" },
    { name="Giulio Turrisi", email="giulio.turrisi@iit.it" },
]
maintainers = [
    { name="Daniel Felipe Ordoñez Apraez", email="daniels.ordonez@gmail.com" },
]

readme = "README.md"
#license = "TODO"
keywords = ["robotics", "locomotion", "quadruped", "deep", "reinforcement", "learning", "environment", "gym", "gymnasium", "mujoco"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]

packages = [{include = "gym_quadruped"}]

dependencies = [
    "numpy",
    "scipy==1.15.1",
    "robot_descriptions",
    "mujoco==3.1.5",
    "noise",
    "opencv-python",
    "h5py",
]

[tool.ruff]
line-length = 120
target-version = "py310"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".idea",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff.lint]
select = [
    "E",    # pycodestyle
#    "W",    # pycodestyle
    "F",    # Pyflakes
    "I",
    "N",
    "B",
    "C4",
    "UP",
    "FA",
    "ISC",
    "ICN",
    "SIM"   # flake8-simplify
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
    "E701",  # short single-line statements are fine
    "D100",
    "N806",  # Uppercase letters are useful sometimes, we are not python Hitler here
    "N806",  # Uppercase letters are useful sometimes, we are not python Hitler here
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true


#_______________________________________________________
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"